@@ -10,7 +10,7 @@
 // Class to provide multibyte enabled string methods
 class AJAXChatString {
 
-	function subString($str, $start=0, $length=null, $encoding='UTF-8') {
+	public static function subString($str, $start=0, $length=null, $encoding='UTF-8') {
 		if($length === null) {
 			$length = AJAXChatString::stringLength($str);
 		}		
@@ -23,7 +23,7 @@ class AJAXChatString {
 		}
 	}
 	
-	function stringLength($str, $encoding='UTF-8') {
+	public static function stringLength($str, $encoding='UTF-8') {
 		if(function_exists('mb_strlen')) {
 			return mb_strlen($str, $encoding);
 		} else if(function_exists('iconv_strlen')) {
